修改一些配置，新增ResultAPI返回

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,9 @@ spring.datasource.testOnBorrow=false
 spring.datasource.testOnReturn=false
 spring.datasource.poolPreparedStatements=true
 spring.datasource.maxOpenPreparedStatements=20
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=GMT+8
+spring.jackson.default-property-inclusion=non-null
 
 #mybatis
 mybatis.mapper-locations=classpath*:mapper/*Mapper.xml
