--- a/pom.xml
+++ b/pom.xml
@@ -27,23 +27,20 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-<!-- 			<exclusions> -->
-<!-- 				<exclusion> -->
-<!-- 					<groupId>com.fasterxml.jackson.core</groupId> -->
-<!-- 					<artifactId>jackson-databind</artifactId> -->
-<!-- 				</exclusion> -->
-<!-- 			</exclusions> -->
 		</dependency>
-		<!-- <dependency> -->
-		<!-- <groupId>com.wsh</groupId> -->
-		<!-- <artifactId>wsh-starter</artifactId> -->
-		<!-- <version>1.0.0</version> -->
-		<!-- </dependency> -->
-		<!-- <dependency> -->
-		<!-- <groupId>mysql</groupId> -->
-		<!-- <artifactId>mysql-connector-java</artifactId> -->
-		<!-- <scope>runtime</scope> -->
-		<!-- </dependency> -->
+
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>3.9.1</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.1</version>
+		</dependency>
+
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
@@ -155,23 +152,11 @@
 		</pluginManagement>
 	</build>
 
-	<!-- 发布快照和稳定版 -->
-	<distributionManagement>
-		<repository>
-			<id>releases</id>
-			<url>http://47.107.88.216:8081/repository/maven-releases/</url>
-		</repository>
-		<snapshotRepository>
-			<id>snapshots</id>
-			<url>http://47.107.88.216:8081/repository/maven-snapshots</url>
-		</snapshotRepository>
-	</distributionManagement>
-
 	<repositories>
 		<repository>
 			<id>nexus</id>
 			<name>nexus</name>
-			<url>http://47.107.88.216:8081/repository/maven-public/</url>
+			<url>http://evanick.cn:15003/nexus/content/repositories/thirdparty/</url>
 			<releases>
 				<enabled>true</enabled>
 			</releases>
@@ -193,18 +178,17 @@
 		</repository>
 
 	</repositories>
-
-	<pluginRepositories>
-		<pluginRepository>
-			<id>nexus</id>
-			<name>nexus</name>
-			<url>http://47.107.88.216:8081/repository/maven-public/</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</pluginRepository>
-	</pluginRepositories>
+	<!-- <repositories> -->
+	<!-- <repository> -->
+	<!-- <id>nexus</id> -->
+	<!-- <name>nexus</name> -->
+	<!-- <url>http://evanick.cn:15003/nexus/content/repositories/thirdparty/</url> -->
+	<!-- <releases> -->
+	<!-- <enabled>true</enabled> -->
+	<!-- </releases> -->
+	<!-- <snapshots> -->
+	<!-- <enabled>true</enabled> -->
+	<!-- </snapshots> -->
+	<!-- </repository> -->
+	<!-- </repositories> -->
 </project>
