--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,24 +31,22 @@ spring.jackson.default-property-inclusion=non-null
 mybatis.mapper-locations=classpath*:mapper/*Mapper.xml
 #mybatis.type-aliases-package=com.bluecoffee.domain.**
 
-# REDIS (RedisProperties)
-# Redis数据库索引（默认为0）
-spring.redis.database=0  
-# Redis服务器地址
+# redis (RedisProperties)
+# 缓存时长，单位秒
+cache.default-exp=120
+# 数据库设置
+spring.redis.database=0
+# 宿主机IP
 spring.redis.host=127.0.0.1
-# Redis服务器连接端口
-spring.redis.port=6379  
-# Redis服务器连接密码（默认为空）
-spring.redis.password=  
-# 连接池最大连接数（使用负值表示没有限制）
-spring.redis.jedis.pool.max-active=8  
-# 连接池最大阻塞等待时间（使用负值表示没有限制）
-spring.redis.jedis.pool.max-wait=-1
-# 连接池中的最大空闲连接
-spring.redis.jedis.pool.max-idle=8  
-# 连接池中的最小空闲连接
-spring.redis.jedis.pool.min-idle=0  
-# 连接超时时间（毫秒）
-spring.redis.timeout=5000
-
-#rabbitMQ
+# 端口号
+spring.redis.port=6379
+# 密码
+#spring.redis.password=redis
+# 连接超时时间 单位 ms（毫秒）
+spring.redis.timeout=3000
+# 连接池中的最大空闲连接，默认值也是8
+spring.redis.lettuce.pool.max-idle=100
+# 连接池中的最小空闲连接，默认值也是0
+spring.redis.lettuce.pool.min-idle=50
+# 如果赋值为-1，则表示不限制
+spring.redis.lettuce.pool.max-wait=2000
