--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,11 @@
 	</properties>
 
 	<dependencies>
-		   <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-data-redis</artifactId>
-                <version>2.0.4.RELEASE</version>
-    </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+			<version>2.0.4.RELEASE</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -41,18 +41,18 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.1</version>
 		</dependency>
-<!-- https://mvnrepository.com/artifact/com.dyuproject.protostuff/protostuff-core -->
-     <dependency>
-          <groupId>com.dyuproject.protostuff</groupId>
-          <artifactId>protostuff-core</artifactId>
-          <version>1.0.8</version>
-      </dependency>
- 
-      <dependency>
-          <groupId>com.dyuproject.protostuff</groupId>
-          <artifactId>protostuff-runtime</artifactId>
-          <version>1.0.8</version>
-      </dependency>
+		<!-- https://mvnrepository.com/artifact/com.dyuproject.protostuff/protostuff-core -->
+		<dependency>
+			<groupId>com.dyuproject.protostuff</groupId>
+			<artifactId>protostuff-core</artifactId>
+			<version>1.0.8</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.dyuproject.protostuff</groupId>
+			<artifactId>protostuff-runtime</artifactId>
+			<version>1.0.8</version>
+		</dependency>
 
 
 		<dependency>
@@ -101,6 +101,11 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-pool2</artifactId>
 			<version>2.0</version>
+		</dependency>
+		<!-- aop -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
 	</dependencies>
 
