我也忘了我修改了什么。提交

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,16 +31,11 @@ spring.jackson.default-property-inclusion=non-null
 mybatis.mapper-locations=classpath*:mapper/*Mapper.xml
 #mybatis.type-aliases-package=com.bluecoffee.domain.**
 
-# redis (RedisProperties)
-# 缓存时长，单位秒
-cache.default-exp=120
+# redis
 # 数据库设置
 spring.redis.database=0
-# 宿主机IP
-spring.redis.host=127.0.0.1
-# 端口号
+spring.redis.host=127.0.0.1 
 spring.redis.port=6379
-# 密码
 #spring.redis.password=redis
 # 连接超时时间 单位 ms（毫秒）
 spring.redis.timeout=3000
