--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,3 +45,6 @@ spring.redis.lettuce.pool.max-idle=100
 spring.redis.lettuce.pool.min-idle=50
 # 如果赋值为-1，则表示不限制
 spring.redis.lettuce.pool.max-wait=2000
+
+#elasticsearch
+spring.data.elasticsearch.cluster-nodes=http://localhost:9200
